src/test/deca/context/invalid/class_int.deca
// Contextuellement, il n'est pas possible d'appeler une classe comme int

class int {
    
}